--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -11,6 +11,14 @@
   max-width: 540px;
 }
 
+@media all and (max-width: 767px){
+  .static-height {
+    height: 330px;
+  }
+}
+.md23 {
+  width: 23%;
+}
 .xs25 {
   width: 25%;
 }
@@ -29,16 +37,31 @@
 .xs75 {
   width: 75%;
 }
+.xs100 {
+  width: 100%;
+}
 
 @media all and (min-width: 768px) {
+  .sm33 {
+    width: 33.33333%;
+  }
   .sm48 {
     width: 48%;
+  }
+  .sm50 {
+    width: 50%;
+  }
+  .sm100 {
+    width: 100%;
   }
 }
 
 @media all and (min-width: 992px) {
-  .md24 {
-    width: 24%;
+  .md23 {
+    width: 23%;
+  }
+  .md48 {
+    width: 48%;
   }
   .md50 {
      width: 50%;
