--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1948,5 +1948,6 @@
 @import 'components/_footer';
 
 @import 'pages/homepage';
+@import 'pages/portfolio';
 @import 'pages/design';
 @import 'pages/item';
