--- a/scss/pages/_design.scss
+++ b/scss/pages/_design.scss
@@ -5,18 +5,26 @@
 .designPage {
   background: url('/img/design_bg.jpg') 50% no-repeat;
   background-size: cover;
+  background-color: #FFF;
+  background-blend-mode: luminosity, normal;
   align-items: stretch;
 }
 
 .aside {
   background: url('/img/go_to_main.jpg') 50% no-repeat;
   background-size: cover;
+  background-color: #FFF;
+  background-blend-mode: luminosity, normal;
   max-width: 380px;
 
   .aside-rotate-block {
     flex-direction: column-reverse;
     transform: rotate(90deg);
     text-align: center;
+  }
+
+  &:after {
+    background: rgba(0, 0, 0, 0.7);
   }
 
   .middle-title {
@@ -38,5 +46,20 @@
     svg {
       fill: white;
     }
+  }
+}
+
+@media all and (max-width: 559px) {
+  .aside {
+    .prev {
+      display: none;
+    }
+  }
+}
+
+@media all and (max-height: 499px) {
+  body {
+    min-height: 500px;
+    position: relative;
   }
 }
