--- a/css/main.css
+++ b/css/main.css
@@ -74,6 +74,12 @@ svg {
   padding: 4rem;
   max-width: 540px; }
 
+@media all and (max-width: 767px) {
+  .static-height {
+    height: 330px; } }
+.md23 {
+  width: 23%; }
+
 .xs25 {
   width: 25%; }
 
@@ -92,17 +98,42 @@ svg {
 .xs75 {
   width: 75%; }
 
+.xs100 {
+  width: 100%; }
+
 @media all and (min-width: 768px) {
+  .sm33 {
+    width: 33.33333%; }
+
   .sm48 {
-    width: 48%; } }
+    width: 48%; }
+
+  .sm50 {
+    width: 50%; }
+
+  .sm100 {
+    width: 100%; } }
 @media all and (min-width: 992px) {
-  .md24 {
-    width: 24%; }
+  .md23 {
+    width: 23%; }
+
+  .md48 {
+    width: 48%; }
 
   .md50 {
     width: 50%; } }
 .align-c {
   text-align: center; }
+
+.shadow {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 2;
+  top: 0;
+  left: 0;
+  display: none; }
 
 .text-upper {
   text-transform: uppercase; }
@@ -114,7 +145,7 @@ img {
   max-width: 100%;
   vertical-align: middle; }
   img.transform-c-c {
-    width: 100%;
+    min-width: 100%;
     min-height: 100%;
     max-width: inherit; }
 
@@ -147,15 +178,18 @@ img {
     right: -50px;
     top: calc(50%); }
 
-.line-before:before {
-  content: '';
-  width: 50px;
-  height: 1px;
-  background: black;
-  display: block;
-  position: absolute;
-  left: -50px;
-  top: calc(50%); }
+.line-before {
+  position: relative;
+  padding: 0 20px; }
+  .line-before:before {
+    content: '';
+    width: 50px;
+    height: 1px;
+    background: black;
+    display: block;
+    position: absolute;
+    left: -50px;
+    top: calc(50%); }
 
 .overlay {
   position: relative;
@@ -195,6 +229,12 @@ img {
 .bold {
   font-weight: bold; }
 
+@media all and (max-width: 767px) {
+  html {
+    font-size: 50%; } }
+@media all and (min-width: 768px) and (max-width: 991px) {
+  html {
+    font-size: 52%; } }
 .main-heading {
   font-size: 5rem;
   font-weight: 700;
@@ -236,26 +276,45 @@ img {
   .read-more:hover, .read-more:focus {
     color: white; }
 
+@media all and (min-width: 560px) and (max-width: 767px) {
+  .main-heading {
+    font-size: 4rem; } }
+@media all and (max-width: 559px) {
+  .main-heading {
+    font-size: 3rem; }
+    .main-heading span {
+      font-size: 1.4rem; } }
 .btn {
   font-weight: 700;
   text-transform: uppercase;
   transition: .2s all;
-  padding: 20px 5.5rem;
+  padding: 20px 4.5rem;
   font-size: 12px;
   text-align: center;
   cursor: pointer; }
 
 .btn-active {
   border: 2px solid #41abe1;
-  background-color: rgba(8, 8, 8, 0.8);
+  background: transparent;
   color: #41abe1; }
   .btn-active:hover, .btn-active:focus {
-    background-color: #080808; }
+    background-color: #41abe1;
+    color: white; }
+
+.overlay .btn-active, .slick-slider .btn-active {
+  background-color: rgba(8, 8, 8, 0.8); }
+  .overlay .btn-active:hover, .overlay .btn-active:focus, .slick-slider .btn-active:hover, .slick-slider .btn-active:focus {
+    background-color: #080808;
+    color: #41abe1; }
+.overlay .disable, .slick-slider .disable {
+  color: rgba(255, 255, 255, 0.3); }
+  .overlay .disable:hover, .overlay .disable:focus, .slick-slider .disable:hover, .slick-slider .disable:focus {
+    color: white; }
 
 .disable {
-  color: rgba(255, 255, 255, 0.3); }
+  color: rgba(0, 0, 0, 0.7); }
   .disable:hover, .disable:focus {
-    color: white; }
+    color: #000; }
 
 .submit {
   padding: 10px;
@@ -267,6 +326,9 @@ img {
     background-color: #41abe1;
     color: white; }
 
+@media all and (max-width: 559px) {
+  .btn {
+    padding: 12px 2.5rem; } }
 label {
   color: #080808;
   font-size: 1.2rem;
@@ -285,7 +347,8 @@ input, textarea, select {
   width: 100%; }
 
 input[type=submit], button {
-  background: transparent; }
+  background: transparent;
+  border: none; }
 
 .form-field {
   margin: 10px 0; }
@@ -295,7 +358,10 @@ input[type=submit], button {
     color: #000;
     font-size: 14px;
     font-weight: 400;
-    border: 2px solid rgba(0, 0, 0, 0.3); }
+    border: 2px solid rgba(0, 0, 0, 0.3);
+    transition: .2s all; }
+    .form-field input:focus, .form-field input:hover, .form-field textarea:focus, .form-field textarea:hover {
+      border-color: #41abe1; }
     .form-field input:focus::-webkit-input-placeholder, .form-field textarea:focus::-webkit-input-placeholder {
       color: transparent; }
     .form-field input:focus::-moz-placeholder, .form-field textarea:focus::-moz-placeholder {
@@ -335,7 +401,7 @@ input[type=submit], button {
   min-width: 100%;
   left: 0;
   background: none;
-  z-index: 1; }
+  z-index: 2; }
 
 header {
   background: #000; }
@@ -351,22 +417,20 @@ header {
     header nav .container {
       padding: 0 10px; }
 
-.phones {
-  margin: 0 0 0 25px; }
-  .phones a {
-    display: block;
-    font-weight: 300;
-    font-size: 1.8rem;
-    margin-bottom: 10px; }
-    .phones a:last-child {
-      margin-bottom: 0; }
-    .phones a span {
-      color: #41abe1;
-      display: inline-block;
-      margin-right: 10px;
-      font-weight: bold; }
-  .phones a, .phones span {
-    line-height: 1; }
+.phones a {
+  display: block;
+  font-weight: 300;
+  font-size: 1.8rem;
+  margin: 0 0 10px 25px; }
+  .phones a:last-child {
+    margin-bottom: 0; }
+  .phones a span {
+    color: #41abe1;
+    display: inline-block;
+    margin-right: 10px;
+    font-weight: bold; }
+.phones a, .phones span {
+  line-height: 1; }
 
 .main-link > a {
   padding: 12px 0 16px;
@@ -432,6 +496,73 @@ header {
   fill: white;
   background: #41abe1; }
 
+.mobile-menu {
+  display: none;
+  background: #ebebeb;
+  position: fixed;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  color: #000;
+  font-weight: 700;
+  z-index: 3;
+  text-align: center;
+  font-size: 2rem;
+  padding: 5rem 0;
+  text-transform: uppercase; }
+  .mobile-menu a {
+    padding: 5px;
+    display: block; }
+
+.burger {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 20px;
+  display: none;
+  z-index: 4; }
+  .burger span {
+    width: 25px;
+    height: 2px;
+    margin-bottom: 5px;
+    display: block;
+    background-color: #41abe1;
+    transition: .3s all; }
+    .burger span:last-child {
+      margin: 0; }
+
+.open-menu.burger span {
+  transition: .3s all;
+  position: relative; }
+  .open-menu.burger span:first-child {
+    transform: rotate(45deg);
+    top: 4px; }
+  .open-menu.burger span:nth-child(2) {
+    transform: rotate(-45deg);
+    top: -3px; }
+  .open-menu.burger span:last-child {
+    display: none; }
+.open-menu.mobile-menu {
+  display: block; }
+
+@media all and (max-width: 767px) {
+  .language {
+    display: none; } }
+@media all and (min-width: 768px) and (max-width: 991px) {
+  .menu a {
+    margin-left: 10px; } }
+@media all and (max-width: 559px) {
+  .header {
+    justify-content: center; }
+
+  .logo {
+    width: 100%; }
+
+  .phones, nav {
+    display: none; }
+
+  .burger {
+    display: block; } }
 .footer {
   font-size: 1.2rem;
   background: #000;
@@ -444,9 +575,12 @@ header {
     margin: 0 20px; }
 
 .socials svg {
-  fill: white; }
+  fill: white;
+  transition: .2s all; }
 .socials li {
   margin: 0 10px; }
+  .socials li:hover svg, .socials li:focus svg {
+    fill: #41abe1; }
 
 .absolute-footer {
   position: absolute;
@@ -456,12 +590,30 @@ header {
   background: none;
   z-index: 1; }
 
+@media all and (max-width: 559px) {
+  .footer {
+    padding: 10px 0 5px; }
+    .footer .container {
+      flex-flow: row wrap; }
+    .footer .emotion {
+      display: block;
+      margin: 5px auto; }
+    .footer p, .footer .socials {
+      width: 100%;
+      text-align: center; }
+    .footer p {
+      margin-bottom: 10px; } }
 .main-page {
   min-height: calc(100% - 225px); }
 
+.static-page {
+  height: calc(100% - 225px); }
+
 .homepage {
   background: url("/img/homepage_bg.jpg") 50% no-repeat;
-  background-size: cover; }
+  background-size: cover;
+  background-color: #FFF;
+  background-blend-mode: luminosity, normal; }
 
 .overlay .description {
   width: 85%;
@@ -473,22 +625,150 @@ header {
     line-height: 1.5;
     opacity: 0.8; }
 
+@media all and (min-width: 600px) and (max-width: 991px) {
+  .main-page {
+    min-height: calc(100% - 221px); }
+
+  .static-page {
+    height: calc(100% - 221px); } }
+@media all and (max-width: 991px) {
+  .overlay .description {
+    padding: 20px 0; } }
+@media all and (max-width: 599px) {
+  .main-page {
+    min-height: calc(100% - 216px); }
+
+  .static-page {
+    height: calc(100% - 216px); } }
+.portfolio {
+  height: 100%; }
+  .portfolio .slick-slide {
+    width: 50vw;
+    overflow: hidden;
+    position: relative;
+    transition: .4s all; }
+    .portfolio .slick-slide .btn {
+      position: absolute;
+      z-index: 1;
+      bottom: 30px;
+      left: 50%;
+      transform: translateX(-50%);
+      display: none; }
+    .portfolio .slick-slide:not(.slick-center) {
+      filter: grayscale(1); }
+    .portfolio .slick-slide:after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      display: block;
+      top: 0;
+      left: 0; }
+  .portfolio .slick-center.slick-current {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    justify-content: center; }
+    .portfolio .slick-center.slick-current:after {
+      content: none; }
+    .portfolio .slick-center.slick-current .btn {
+      display: block; }
+    .portfolio .slick-center.slick-current:hover:after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.8);
+      display: block;
+      top: 0;
+      left: 0; }
+    .portfolio .slick-center.slick-current:hover .see-more {
+      display: block;
+      position: relative;
+      z-index: 1; }
+    .portfolio .slick-center.slick-current:hover .btn {
+      display: none; }
+    .portfolio .slick-center.slick-current:hover img {
+      filter: grayscale(1); }
+  .portfolio .slick-list, .portfolio .slick-track {
+    height: 100%; }
+  .portfolio img {
+    min-width: 100%;
+    min-height: 100%;
+    max-width: inherit; }
+
+.arrows {
+  position: absolute;
+  z-index: 10;
+  top: 50%;
+  transform: translateY(-50%);
+  color: white;
+  text-transform: uppercase;
+  font-size: 2rem; }
+  .arrows .line-after:after, .arrows .line-after:before, .arrows .line-before:after, .arrows .line-before:before {
+    background: white; }
+  .arrows svg {
+    fill: white; }
+
+.nextArrow {
+  right: 8%; }
+  .nextArrow svg {
+    transform: rotate(180deg); }
+
+.prevArrow {
+  left: 8%; }
+
+.see-more {
+  display: none;
+  color: white;
+  text-align: center; }
+  .see-more span {
+    text-transform: uppercase;
+    display: block;
+    margin-top: 3rem; }
+  .see-more svg {
+    fill: white; }
+  .see-more a:before, .see-more a:after {
+    background: white; }
+
+@media all and (max-width: 767px) {
+  .arrows .line-after:after, .arrows .line-after:before, .arrows .line-before:after, .arrows .line-before:before {
+    content: none; } }
+@media all and (max-width: 559px) {
+  .arrows {
+    font-size: 0; }
+
+  .portfolio .slick-slide {
+    width: 70vw; }
+
+  .prevArrow {
+    left: 4%; }
+
+  .nextArrow {
+    right: 4%; } }
 .absolute-height {
   min-height: 100%; }
 
 .designPage {
   background: url("/img/design_bg.jpg") 50% no-repeat;
   background-size: cover;
+  background-color: #FFF;
+  background-blend-mode: luminosity, normal;
   align-items: stretch; }
 
 .aside {
   background: url("/img/go_to_main.jpg") 50% no-repeat;
   background-size: cover;
+  background-color: #FFF;
+  background-blend-mode: luminosity, normal;
   max-width: 380px; }
   .aside .aside-rotate-block {
     flex-direction: column-reverse;
     transform: rotate(90deg);
     text-align: center; }
+  .aside:after {
+    background: rgba(0, 0, 0, 0.7); }
   .aside .middle-title {
     color: white;
     font-weight: 400; }
@@ -503,6 +783,13 @@ header {
     .aside .prev svg {
       fill: white; }
 
+@media all and (max-width: 559px) {
+  .aside .prev {
+    display: none; } }
+@media all and (max-height: 499px) {
+  body {
+    min-height: 500px;
+    position: relative; } }
 .item-image {
   position: relative;
   overflow: hidden; }
@@ -519,8 +806,14 @@ header {
 .options li {
   text-align: center;
   margin-bottom: 5rem; }
+.options p {
+  font-size: 12px; }
 
 .item-description > p {
   margin-bottom: 4rem; }
+
+@media all and (max-width: 559px) {
+  .options li {
+    width: 48%; } }
 
 /*# sourceMappingURL=main.css.map */
