--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -2,7 +2,7 @@
   font-weight: 700;
   text-transform: uppercase;
   transition: .2s all;
-  padding: 20px 5.5rem;
+  padding: 20px 4.5rem;
   font-size: 12px;
   text-align: center;
   cursor: pointer;
@@ -10,19 +10,39 @@
 
 .btn-active {
   border: 2px solid $main-color;
-  background-color: rgba(8, 8, 8, 0.8);
+  background: transparent;
   color: $main-color;
 
   &:hover, &:focus {
-    background-color: rgba(8, 8, 8, 1);
+    background-color: $main-color;
+    color: white;
+  }
+}
+
+.overlay, .slick-slider {
+  .btn-active {
+    background-color: rgba(8, 8, 8, 0.8);
+
+    &:hover, &:focus {
+      background-color: rgba(8, 8, 8, 1);
+      color: $main-color;
+    }
+  }
+
+  .disable {
+    color: rgba(255, 255, 255, 0.3);
+
+    &:hover, &:focus {
+      color: white;
+    }
   }
 }
 
 .disable {
-  color: rgba(255, 255, 255, 0.3);
+  color: rgba(0, 0, 0, 0.7);
 
   &:hover, &:focus {
-    color: white;
+    color: #000;
   }
 }
 
@@ -36,5 +56,11 @@
   &:hover, &:focus {
     background-color: $main-color;
     color: white;
+  }
+}
+
+@media all and (max-width: 559px) {
+  .btn {
+    padding: 12px 2.5rem;
   }
 }
