--- a/scss/layout/_default.scss
+++ b/scss/layout/_default.scss
@@ -2,6 +2,17 @@
   text-align: center;
 }
 
+.shadow {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,.6);
+  z-index: 2;
+  top: 0;
+  left: 0;
+  display: none;
+}
+
 .text-upper {
   text-transform: uppercase;
 }
@@ -15,7 +26,7 @@ img {
   vertical-align: middle;
 
   &.transform-c-c {
-    width: 100%;
+    min-width: 100%;
     min-height: 100%;
     max-width: inherit;
   }
@@ -63,6 +74,9 @@ img {
 }
 
 .line-before {
+  position: relative;
+  padding: 0 20px;
+
   &:before {
     content: '';
     width: 50px;
@@ -123,4 +137,16 @@ img {
 
 .bold {
   font-weight: bold;
+}
+
+@media all and (max-width: 767px) {
+  html {
+    font-size: 50%;
+  }
+}
+
+@media all and (min-width: 768px) and (max-width: 991px) {
+  html {
+    font-size: 52%;
+  }
 }
