--- a/scss/pages/_item.scss
+++ b/scss/pages/_item.scss
@@ -20,10 +20,20 @@
     text-align: center;
     margin-bottom: 5rem;
   }
+
+  p {
+    font-size: 12px;
+  }
 }
 
 .item-description {
   & > p {
     margin-bottom: 4rem;
+  }
+}
+
+@media all and (max-width: 559px) {
+  .options li {
+    width: 48%;
   }
 }
